--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -23,9 +23,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         persist-credentials: false
     - run: npm install
-    - run: ng build --prod
-      env:
-        CI: true
+
+    - name: Build
+      run: npm run build -- --prod
     
     - name: Deploy to GH pages 🚀
       uses: JamesIves/github-pages-deploy-action@releases/v3
